Test change to index.html

--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@ Hello World
 <p>New changes to the project</p>
 <p>Another new change</p>
 <p>Yet another new change</p>
+<p>This is a test change</p>
