--- a/index.html
+++ b/index.html
@@ -4,3 +4,4 @@ Hello World
 <p>Yet another new change</p>
 <p>This is a test change</p>
 <p>Another new change</p>
+<p>Testing new deployment process</p>
