Another test deployment with the script

--- a/index.html
+++ b/index.html
@@ -6,3 +6,4 @@ Hello World
 <p>Another new change</p>
 <p>Testing new deployment process</p>
 <p>Another new test deployment</p>
+<p>Another test deployment with the script</p>
